--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -165,3 +165,28 @@ footer {
 .col-xs-3:last-child {
     border-left: 1px solid #ccc;
 }
+
+.modal {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .modal:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: " ";
+    height: 100%;
+  }
+}
+
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+
+.highlights-image{
+  width: 500px;
+  height: 500px;
+  text-align: center;
+}
