--- a/app/views/highlights.html
+++ b/app/views/highlights.html
@@ -1,23 +1,14 @@
 <div class="loading text-muted" ng-hide="lists">
   <fa name="spinner" size="5" spin></fa><br>Loading resources&hellip;</div>
-<div class="row">
-  <div class="col-lg-10 col-lg-offset-1">
-    <div class="ibox">
-      <h4 class="text-center m">
-                {{exhibition}}
-            </h4>
-      <div class="ibox-title">
-        {{ list.title }}
-      </div>
+
       <slick>
 
         <div ng-repeat="(id, list) in lists">
 
-            <div class="ibox-content">
+            <div >
 
-              <p >
+
                 <img  ng-if="list.thumbnail" class="highlights-image" ng-src="{{ list.thumbnail }}" alt="Thumbnail for {{ list.title }}">
-              </p>
 
                 <h2>{{ list.title }}</h2>
             </div>
@@ -26,9 +17,7 @@
 
 
       </slick>
-    </div>
-  </div>
-</div>
+  
 <script>
   $(document).ready(function() {
     $('.slick').slick({
