--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,106 +1,91 @@
+<!--    HOME SCREEN AND IMAGE SLIDER    -->
+<div class="loading text-muted" ng-hide="lists"><fa name="spinner" size="5" spin></fa><br>Loading resources&hellip;</div>
 <main>
-  <link rel="stylesheet" href="css/index.css">
-  <div class="slideshow-container">
-    <div id="header">
-      <ul>
-        <li>
-          <a href="#0" class="popup-description-trigger"><img border="0" alt="Information icon" src="img/icon_info.png" width="100%" height="100%" align="middle">INFORMATION</a>
-        </li>
+<div class="slideshow-container">
+<div id="header">
+    <ul>
+        <li><a href="#0" class="popup-description-trigger"><img border="0" alt="Information icon" src="img/icon_info.png" width="100%" height="100%" align="middle">INFORMATION</a></li>
 
         <li><a href="#0" class="popup-highlights-trigger">{{highlights}}<img border="0" alt="Exhibtiion Highlights icon" src="img/icon_museum.png" width="100%" height="100%" align="middle"></a></li>
-      </ul>
-    </div>
-
-    <div class="homeSlides" ng-repeat="(id, list) in lists">
-      <img ng-if="list.thumbnail" height="100%" width="100%" ng-src="{{ list.thumbnail }}" alt="Thumbnail for {{ list.title }}">
-      <div ng-if="!list.thumbnail" height="100%" width="100%">
-        <fa class="blank-icon" name="list" size="4"></fa>
-      </div>
-      <div class="slide-caption"></div>
-
-
-    </div>
-
-
-
-  </div>
-
-  <div style="text-align:center">
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-  </div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="js/popup_main.js"></script>
-  <script type="text/javascript" src="js/slideshow.js"></script>
-
-
-</main>
-
-<div class="base-nav">
-  <ul>
-    <li class="primary-close"><a href="#">THE SELL</a></li>
-
-    <li id="base-nav-featured"><a href="#">FEATURED</a></li>
-    <li id="base-nav-resources"><a href="#">RESOURCES</a></li>
-    <li>
-      <!-- EMPTY DIV FOR GREY LINE -->
-    </li>
-    <li>
-      <a class="grid-trigger" href="#0">
-        <img src="img/icon-trigger.png" width="100%" height="100%" /></a>
-    </li>
-    <!-- primary exhibition trigger -->
-  </ul>
+    </ul>
 </div>
+
+<div class="homeSlides" ng-repeat="(id, list) in lists">
+  <img ng-if="list.thumbnail" height="100%" width="100%" ng-src="{{ list.thumbnail }}" alt="Thumbnail for {{ list.title }}">
+  <div ng-if="!list.thumbnail" height="100%" width="100%">
+    <fa class="blank-icon" name="list" size="4"></fa>
+  </div>
+  <div class="slide-caption"></div>
+
+
+</div>
+
+</div>
+
+<div style="text-align:center">
+<span class="dot"></span>
+<span class="dot"></span>
+<span class="dot"></span>
+</div>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/popup_main.js"></script>
+<script type="text/javascript" src="js/slideshow.js"></script>
+</main>
+<!--    HOME SCREEN AND IMAGE SLIDER    -->
+<div class="primary">
+    <div class="base-nav">
+     <ul>
+        <li class="primary-close"><a href="#">THE SELL</a></li>
+
+         <li id="base-nav-featured"><a ng-href="#/featured/">FEATURED</a></li>
+        <li id="base-nav-resources"><a href="#">RESOURCES</a></li>
+        <li><!-- EMPTY DIV FOR GREY LINE --></li>
+        <li><a class="grid-trigger" href="#0">
+            <img src="img/icon-trigger.png" width="100%" height="100%"/></a>
+         </li> <!-- primary exhibition trigger -->
+     </ul>
+    </div>
+  </div>
+
+<!--    POP UP FOR THE EXHIBITION DESCRIPTION    -->
 <div class="popup-description" role="alert">
-  <div class="popup-description-container">
+<div class="popup-description-container">
     <h1>{{exhibition}}</h1>
     <p>{{description}}</p>
-    <div id="ex_high">
-      <a href="#" class="exhigh-trigger">
-        <center>{{highlights}}</center>
-        <img src="img/icon_arrow.png" height="40px" width="84px"></a>
-    </div>
-    <img class="popup-description-close" src="img/icon_close.png" height="100%" width="100%" />
-  </div>
+        <div id="ex_high"><a href="#" class="exhigh-trigger">
+            <center>{{highlights}}</center>
+            <img src="img/icon_arrow.png" height="40px" width="84px"></a>
+        </div>
+<img class="popup-description-close" src="img/icon_close.png" height="100%" width="100%"/>
+</div>
 </div>
 
 
 <!-- POPUP FOR EXHIBITION HIGHLIGHTS BELOW -->
 <div class="popup-highlights" role="alert">
-  <div class="popup-highlights-container">
+<div class="popup-highlights-container">
     <div id="highlights-header">
-      <div id="highlights-title">HIGHLIGHTS</div>
-      <img class="popup-highlights-close" src="img/icon_close.png" height="100%" width="100%" />
+        <div id="highlights-title">HIGHLIGHTS</div>
+        <img class="popup-highlights-close" src="img/icon_close.png" height="100%" width="100%"/>
     </div>
 
-    <!-- ADD THE YOUR HIGHLIGHT IMAGES AND DESCRIPTIONS HERE -->
-    <div class="highlights-slider-container">
-      <div id="highlights-slider">
-        <div class="highSlides" ng-repeat="(id, list) in lists">
-          <div class="numbertext">1 / 5</div>
-          <img ng-src="{{ list.thumbnail }}" height="100%" width="100%">
-          <div class="highSlides-caption">{{ list.title }}</div>
-        </div>
-      </div>
-
-      <a class="prev" onclick="plusSlides(-1)"><img src="img/icon_previous.png" /> previous</a>
-      <a class="next" onclick="plusSlides(1)">next <img src="img/icon_next.png"/></a>
+<!-- ADD THE YOUR HIGHLIGHT IMAGES AND DESCRIPTIONS HERE -->
+<div class="highlights-slider-container">
+  <div id="highlights-slider">
+    <div class="highSlides" ng-repeat="(id, list) in lists">
+      <div class="numbertext">{{$index+1}} / {{lists.length}}</div>
+      <img ng-src="{{ list.thumbnail }}" height="100%" width="100%">
+      <div class="highSlides-caption">{{ list.title }}</div>
     </div>
-
-    <div style="text-align:center">
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-      <span class="dot" onclick="currentSlide(3)"></span>
-      <span class="dot" onclick="currentSlide(4)"></span>
-      <span class="dot" onclick="currentSlide(5)"></span>
-    </div>
-    <script src="js/high_slideshow.js"></script>
   </div>
+
+  <a class="prev" onclick="plusSlides(-1)"><img src="img/icon_previous.png" /> previous</a>
+  <a class="next" onclick="plusSlides(1)">next <img src="img/icon_next.png"/></a>
 </div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="js/popup_main.js"></script>
-<!-- Resource jQuery -->
-<!--    POP UP FOR THE EXHIBITION DESCRIPTION    -->
+<div style="text-align:center">
+<span class="dot" ng-repeat="(id, list) in lists" ng-click="currentSlide($index+1)"></span>
+</div>
+    <script src="js/high_slideshow.js"></script>
+</div>
+</div>
