--- a/app/views/main.html
+++ b/app/views/main.html
@@ -23,9 +23,8 @@
 </div>
 
 <div style="text-align:center">
-<span class="dot"></span>
-<span class="dot"></span>
-<span class="dot"></span>
+<span class="dot" ng-repeat="(id, list) in lists"></span>
+
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/popup_main.js"></script>
