--- a/app/views/resources.html
+++ b/app/views/resources.html
@@ -28,7 +28,7 @@
                   <option value="year">Year</option>
 
                   </select>
-                  <input type="submit">
+
             </form>
         </li>
         <li>
@@ -41,7 +41,7 @@
 
     <ul class="resources-grid">
         <li ng-repeat="item in items | filter:query | orderBy:sort | limitTo:totalDisplayed">
-            <div class="resource-grid-thumbnail" style="background-image: url({{ item.thumbnail }});width: 100%;height: 100%;"></div>
+            <div ng-click="test()"class="resource-grid-thumbnail resource-grid-thumbnail-div" style="background-image: url({{ item.thumbnail }});width: 100%;height: 100%;"></div>
             <a href="#0" class="resources-grid-title">{{ item.title }}</a>
             <a href="#0" class="resources-grid-type">{{ item.type}}</a>
             <a href="#0" class="resources-grid-year">{{ item.date}}</a>
@@ -49,11 +49,12 @@
 
 
     </ul>
+    <script src="js/popup_main.js"></script>
 </div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="js/popup_main.js"></script>
+
+
     <div class="secondary" role="alert">
-	<div class="secondary-container" ng-hide="!lists">
+	<div class="secondary-container">
 		<ul class="secondary-list">
             <li>
                 <div class="secondary-item-title">ITEM</div>
@@ -146,7 +147,7 @@
     </div>
 
 <script>
-  jQuery(document).ready(function ($) {
+  $(document).ready(function() {
   $('.resources').css({
       'display': 'inline',
   });
@@ -159,5 +160,6 @@
   $('.base-nav li:nth-child(3)').css({
       'opacity': '1',
   });
+
 });
 </script>
