--- a/app/views/lists.html
+++ b/app/views/lists.html
@@ -1,14 +1,54 @@
-<h3>Topics</h3>
-  <div class="loading text-muted" ng-hide="lists"><fa name="spinner" size="5" spin></fa><br>Loading resources&hellip;</div>
-<div class="media" ng-repeat="(id, list) in lists">
-  <div class="media-left">
-    <a ng-href="#/topics/{{ list.order }}">
-      <img ng-if="list.thumbnail" class="thumbnail media-object center-cropped" ng-src="{{ list.thumbnail }}" alt="Thumbnail for {{ list.title }}">
-      <div ng-if="!list.thumbnail" class="thumbnail media-object center-cropped"><fa class="blank-icon" name="list" size="4"></fa></div>    </a>
-  </div>
-  <div class="media-body">
-    <h4 class="media-heading">{{ list.title }}</h4>
-    <div ng-if="list.description" ng-bind-html="list.description | words:config.listSnippet"></div>
-    <a ng-href="#/topics/{{ list.order }}">Browse {{ list.numberOfItems}} items</a>
-  </div>
+
+
+            <!-- FEATURED INFORMATION -->
+<div class="featured">
+    <div id="featured-header">
+        <h1>FEATURED</h1>
+        <ul class="featured-header-icons">
+            <li>
+                <button class="featured-grid">
+                    <img id="button-icon-grid" src="img/icon_grid-black.png" height="100%" width="100%">
+                </button>
+            </li>
+
+            <li>
+                <button class="featured-list">
+                    <img id="button-icon-list"
+                        src="img/icon-list.png" height="100%" width="100%">
+                </button>
+            </li>
+        </ul>
+    </div>
+
+<div class="loading text-muted" ng-hide="lists"><fa name="spinner" size="5" spin></fa><br>Loading resources&hellip;</div>
+<div id="featured-list-container" ng-show="lists">
+    <ul class="featured-grid">
+        <li ng-repeat="(id, list) in lists">
+            <a ng-href="#/topics/{{ list.order }}"><div  class="featured-grid-thumbnail" style="background-image: url({{ list.thumbnail }});width: 100%;height: 100%;">  </div>
+              <!-- <img  class="featured-grid-thumbnail" ng-if="list.thumbnail" ng-src="{{ list.thumbnail }}" alt="Thumbnail for {{ list.title }}"> -->
+            </a>
+            <div class="featured-grid-title">{{ list.title }}</div>
+            <div class="featured-grid-number">{{$index+1}}</div>
+            <div class="featured-grid-description">
+                <p>{{list.description}} </p>
+            </div>
+        </li>
+
+    </ul>
+</div>
+
+<script src="js/grid-list-view.js"></script>
+
+    <div id="featured-footer">
+        <div id="featured-footer-main">
+            <h1>Visit the Exhibition</h1>
+            <a href="https://www.nla.gov.au/exhibitions/the-sell">The Sell: Australian Advertising 1790s to 1990s</a>
+            <p>National Library Australia, Canberra</p>
+            <p>23rd November 2016 to 25th April 2017</p>
+        </div>
+        <div id="featured-footer-secondary">
+            <a href="http://trove.nla.gov.au/"><img src="img/icon_logo.png"/></a>
+            <h3>Powered by <a href="http://trove.nla.gov.au/">Trove</a></h3>
+        </div>
+    </div>
 </div>
