--- a/app/views/list.html
+++ b/app/views/list.html
@@ -53,15 +53,13 @@
 
   <!-- ADD THE YOUR HIGHLIGHT IMAGES AND DESCRIPTIONS HERE -->
   <div class="item-slider-container">
-
     <div id="highlights-slider" >
-      <div class="highSlides">
+      <div class="highSlides" id="firstitemslide">
         <div id="item-header">
 
-            <h1>RESOURCE TITLE</h1>
-            <h2>Monday 1 January 2017</h2>
-            <h3>Origin of item</h3>
-            <h3>Specific page origin</h3>
+          <h1 class="itemtitle"></h1>
+          <h2 class="itemdate"></h2>
+          <h3 class="itemtype"></h3>
 
         </div>
 
@@ -74,17 +72,13 @@
             <h1 class="itemtitle"></h1>
             <h2 class="itemdate"></h2>
             <h3 class="itemtype"></h3>
-            <h3>Specific page origin</h3>
+        </div>
+
+        <div class="list-item itemdisplaytext" >
 
         </div>
 
-        <div class="list-item" >
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu magna lorem. Maecenas efficitur nisl laoreet, ultrices metus in, suscipit risus. Mauris fermentum, dui ut hendrerit interdum, sapien leo mattis lorem, ut varius justo libero et lectus. Nullam auctor, odio sit amet finibus laoreet, ante magna gravida magna, sit amet posuere metus nisi non tellus. Sed congue volutpat risus et gravida. Sed non est lacus.
-
-        Etiam consequat pellentesque est, eu mollis nibh dignissim non. Phasellus auctor urna augue. Vivamus maximus velit turpis, sed elementum libero tincidunt sit amet. Phasellus tincidunt pretium ante, eleifend gravida nunc facilisis ac. Sed pellentesque porta dapibus. Integer lacus velit, sagittis lacinia mi sed, porttitor finibus eros. Nunc at sagittis ipsum. Proin tempor augue quis turpis gravida volutpat.
-        </div>
-
-        <div class="list-item-caption">Albert Francis Lenertz, Aeroplane Jelly Song 1953–1960s, nla.cat-vn3885655, courtesy of McCormick Foods Australia Pty Ltd</div>
+        <div class="list-item-caption itemcaption"></div>
 
       </div>
     </div>
