--- a/app/views/list.html
+++ b/app/views/list.html
@@ -33,9 +33,9 @@
       <ul class="resources-list">
         <li ng-repeat="item in items | itemsInList:list.order| filter:query | orderBy:sort ">
           <div ng-click="displayTertiary(item)" class="resource-grid-thumbnail resource-grid-thumbnail-div" style="background-image: url({{ item.thumbnail }});width: 100%;height: 100%;"></div>
-          <a ng-href="#/topics/{{ list.order }}" class="resources-grid-title">{{ item.title }}</a>
-          <a ng-href="#/topics/{{ list.order }}" class="resources-grid-type">{{ item.type}}</a>
-          <a ng-href="#/topics/{{ list.order }}" class="resources-grid-year">{{ item.date}}</a>
+          <a ng-click="displayTertiary(item)" class="resources-grid-title">{{ item.title }}</a>
+          <a ng-click="displayTertiary(item)" class="resources-grid-type">{{ item.type}}</a>
+          <a ng-click="displayTertiary(item)" class="resources-grid-year">{{ item.date}}</a>
         </li>
 
 
